@@ -51,9 +51,6 @@ Build-Depends: cdbs,
 	libevent-dev (>= 1.4.13),
 	yasm,
 	libv8-dev (>= 2.2.7),
-	libavcodec-dev (>= 4:0.6),
-	libavformat-dev (>= 4:0.6),
-	libavutil-dev (>= 4:0.6),
 	libprotobuf-dev,
 	protobuf-compiler,
 	libglewmx1.5-dev,
